--- a/root/sobremi.html
+++ b/root/sobremi.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 <body>
 
     <header class="custom-header">
-        <img src="/img/Julieth.jpeg" alt="Julieth Ruiz"/>
+        <img src="img/Julieth.jpeg" alt="Julieth Ruiz"/>
 
     </header>
 
@@ -33,8 +33,8 @@
       
         <footer class="custom-footer">
         <span>+57 3165467155</span>
-        <img src="/img/ico_instagram.png" alt="instragram-profile"/>
-        <img src="/img/ico_linkedin.png" alt="linkedin-profile"/>
+        <img src="img/ico_instagram.png" alt="instragram-profile"/>
+        <img src="img/ico_linkedin.png" alt="linkedin-profile"/>
     </footer>
 
 
