--- a/Petshop/index.html
+++ b/Petshop/index.html
@@ -40,7 +40,7 @@
 
     </header>
     <section class="banner">
-        <div class="banner-text">
+        <div class="text-banner">
         <h2>¡Es un placer tenerte aquí!</h2>
         <h3>¡Comederos en descuento!</h3>
         <button>COMEDEROS</button>
@@ -53,25 +53,58 @@
         <p>Comederos - Accesorios - Comida</p>
     </section>
 
-    <section> 
+    <section class="contain"> 
         <article class="block">
             <img src="img/HUESOS.png" width="265" height="268.86">
             <p>Juguete Churrasquito</p>
-            <p>$150</p>
+            <p class="number">$150</p>
         </article>
         <article class="block">
             <img src="img/COMEDERO.png" width="262.03" height="268.86">
             <p>Comedero para Perro</p>
-            <p>$250</p>
+            <p class="number">$250</p>
         </article>
         <article class="block">
             <img src="img/HUESITOS.png" width="265" height="268.86">
             <p>Juguete de Huesito</p>
-            <p>650$</p>
+            <p class="number">$650</p>
         </article>
     </section>
+
+    <section class="contact">
+        <h2>Contáctanos</h2>
+        <input type="text" placeholder="Nombre y Apellido">
+        <input type="text" placeholder="Ingresa tu correo electronico">
+        <input type="text" placeholder="Teléfono">
+
+    <div class="button">
+        <button class="button1">Resetear</button>
+        <button class="button2">Enviar</button>
+    </div>
+
+    </section>
+   
+    <section class="subscribe">
+        <p><i class="far fa-envelope"></i> Suscríbete para más novedades</p>
+        <input type="text" placeholder="Ingresa tu correo electronico">
+        <button>Suscribirme</button>
+    </section>
+
     <footer>
+    <section class="footer">
+        <h2>Localidad</h2>
+        <p>Calle - provincia</p>
+        <h2>Teléfono</h2>
+        <p>Numero de Teléfono</p>
+        <h2>Correo Electrónico</h2>
+        <p>Dirección de correo</p>
+        <img src="img/FRONT&CAT.png">
+    </section>
+
+    <section class="end">
         <p align="center">Todos los derechos reservados Front End</p>
+    </section>
+
     </footer>
 </body>
 
