Agregando el boton

--- a/Heroes/index.html
+++ b/Heroes/index.html
@@ -81,6 +81,8 @@
                 
             </article>
 
+            <a id= button href="#"> + </a>
+
     </section>
     
     <footer id="footer">
