--- a/Petshop/index.html
+++ b/Petshop/index.html
@@ -31,10 +31,10 @@
     <nav id="menu">
             <img src="img/FRONT&CAT.png">
             <ul id="list">
-                <li><i class="fas fa-paw"></i>Categorías</a></li>
-                <li><i class="fas fa-paw"></i>Pets</a></li>
-                <li><i class="fas fa-paw"></i>Nosotros</a></li>
-                <li><i class="fas fa-paw"></i>Contáctanos</a></li>
+                <li><a> Categorías</a></li>
+                <li><a> Pets</a></li>
+                <li><a> Nosotros</a></li>
+                <li><a> Contáctanos</a></li>
             </ul>
     </nav>
 
